--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body{
     font-family: 'gotham', sans-serif !important;
 }
 header{
+    display: flex;
+    justify-content: center;
     color: black !important;
     text-align: center;
     gap: 15px;
