--- a/style.css
+++ b/style.css
@@ -14,18 +14,54 @@
     color: #000 !important;
 }
 body{
-    background-color: #636262 !important;
+    background-color: #242424 !important;
     font-family: 'gotham', sans-serif !important;
+
+}
+
+body {
+  --sb-track-color: #7f70be;
+  --sb-thumb-color: #2f266e;
+  --sb-size: 5px;
+}
+
+body::-webkit-scrollbar {
+  width: var(--sb-size)
+}
+
+body::-webkit-scrollbar-track {
+  background: var(--sb-track-color);
+  border-radius: 1px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: var(--sb-thumb-color);
+  border-radius: 1px;
+  
+}
+
+@supports not selector(::-webkit-scrollbar) {
+  body {
+    scrollbar-color: var(--sb-thumb-color)
+                     var(--sb-track-color);
+  }
 }
 header{
     display: flex;
     justify-content: center;
+    align-items: center;
     color: black !important;
     text-align: center;
     gap: 15px;
-    background-color: #cacaca;
+    
+    background-color: #7f70be;
     border-radius: 13px 0 13px 0;
     margin-bottom: 15px;
+    border: none;
+    border-bottom: #fdfdfd 3px solid ;
+}
+h2{
+    color: #2f265e !important;
 }
 .container{
     display: flex;
@@ -36,12 +72,103 @@ header{
 .functions-box{
     width: 40%;
 }
-
-#boxing{
-    width: 300px !important;
-    background-color: #cacaca !important;
-    height: max-content !important;
+h3{
+    color: #2f265e !important;
+    font-weight: 700;
 }
-@media screen {
+#formula{
+    background-color: #7f70be !important;
+    border-radius: 13px;
+    border: none;
+    border: 1px solid #2f265e;
+
+}
+#formula::placeholder{
+    color: #2f265e ;
+}
+#valor{
+    background-color: #7f70be !important;
+    border-radius: 13px;
+    border: none;
+    border: 1px solid #2f265e;
+}
+button{
+    width: 80px !important;
+    background-color: #7f70be !important;
+    border-radius: 13px;
+    border: none;
+    border: 1px solid #2f265e;
+    color: #2f265e  !important;
+}
+.result{
+    background-color: #2f265e !important;
+    border-bottom: 2px solid #ccc;
+
+}
+.result strong{
+    color: #ddd !important;
+}
+.result p{
+    color: #ddd !important;
+}
+#boxing{
+    width: 300px;
+    background-color: #7f70be !important;
+    height: max-content !important;
     
+}
+.functions-box::-webkit-scrollbar{
+    display: none;
+}
+
+
+@media screen { 
+    
+}
+/* Funciones */
+    .var-box {
+        background: #ffffff;
+        padding: 10px;
+        margin-top: 10px;
+        border-radius: 5px;
+        width: 43%;
+      }
+    .var-box input{
+        border-radius: 13px;
+    }
+      .functions-box {
+        margin-top: 20px;
+        background: #7f70be;
+        border: 1px solid #ccc;
+        padding: 10px;
+        font-size: 14px;
+        border-radius: 5px;
+        max-height: 250px;
+        overflow-y: auto;
+        
+      }
+      .functions-box table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      .functions-box td {
+        padding: 3px;
+        border-bottom: 1px solid #ddd;
+      }
+      .functions-box td:first-child {
+        font-weight: bold;
+      }
+#vars-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    
+}
+
+.box{
+    width: 500px !important;
+}
+td{
+    color: #2f265e !important;
 }
